test/scc_test/expr/semantic-errors/016.a
016.t:4:5: error: expression must be a modifiable lvalue